2009-01-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/component/consumers/disker/disker.py:
	Fixed the arguments passed to a N_ method call.

2009-01-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/admin/gtk/componentlist.py:
	Fixed the behaviour of the component list when selecting a component.
	If the component is already selected the UI is not updated anymore.
	* flumotion/component/consumers/httpstreamer/admin_gtk.py:
	Don't create the Link button until the URI has been received.
	Fixes #1236

2009-01-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/admin/gtk/greeter.py:
	Hide 'Start new manager and connect to it' option on windows.
	Fixes #1179

2009-01-19  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/common/managerspawner.py:
	Do not translate worker and manager when they are part from a command.

2009-01-14  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Julien Le Goff <jlegoff@flumotion.com>

	* flumotion/admin/assistant/models.py:
	Encoders, producers and muxers without a feeder are accepted.
	Fixes #1142

2009-01-14  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Julien Le Goff <jlegoff@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Added a way for the component list to know when a
	worker is connected or disconnected.
	* flumotion/admin/gtk/componentlist.py:
	Code concerning the tooltips rewritten.
	When a worker is offline its name would appear in italics and the
	tooltip of the component would explain that.
	Fixes #1036
	Fixes #1026

2009-01-13  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/scenario/steps/httpstreamersteps.py:
	* flumotion/test/test_wizard_save.py:
	Fixed the tests for the last changes done.

2009-01-13  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/scenario/steps/httpstreamersteps.py:
	Set the port from the porter and don't use the default one.
	Fixes #1209
