@@ -4,6 +4,10 @@ componentdir = $(libdir)/flumotion/python/flumotion/scenario/live
 component_PYTHON = \
 	__init__.py \
 	wizard_gtk.py
+
+component_DATA = \
+	live.xml
+
 TAGS_FILES = $(component_PYTHON)
 
 clean-local:
